--- a/server/pom.xml
+++ b/server/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>github.ant.mxsm</groupId>
@@ -12,7 +10,9 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>socket-server</module>
-	</modules>
+    <module>websocket-server</module>
+    <module>api-server</module>
+  </modules>
 
 	<dependencies>
 		<dependency>
