--- a/distribute/akka/pom.xml
+++ b/distribute/akka/pom.xml
@@ -4,23 +4,26 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>github.ant.mxsm</groupId>
-    <artifactId>server</artifactId>
+    <artifactId>distribute</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>github.ant.mxsm</groupId>
-  <artifactId>websocket-server</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>websocket-server</name>
+  <artifactId>akka</artifactId>
+  <name>akka</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <akka.version>2.5.16</akka.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	  <groupId>com.typesafe.akka</groupId>
+	  <artifactId>akka-cluster_2.11</artifactId>
+	  <version>${akka.version}</version>
+	</dependency>
   </dependencies>
 </project>
