--- a/server/socket-server/pom.xml
+++ b/server/socket-server/pom.xml
@@ -28,5 +28,10 @@
 			<version>${project.version}</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>org.apache.zookeeper</groupId>
+		    <artifactId>zookeeper</artifactId>
+		    <version>3.4.13</version>
+		</dependency>
 	</dependencies>
 </project>
