--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,7 +23,7 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>com.github.mxsm.zookeeper</groupId>
+			<groupId>com.github.mxsm</groupId>
 			<artifactId>zkClient</artifactId>
 			<version>1.0.0</version>
 		</dependency>
