--- a/container/spring-container/src/main/resources/application.yml
+++ b/container/spring-container/src/main/resources/application.yml
@@ -1,13 +1,16 @@
 logging:
-   level:
-      root: INFO
+  level:
+    root: INFO
 
 spring:
-    mxsm:
-      zkclient: 
-          servers: 127.0.0.1:2181
-          seesionTimeout: 2000
-          connectionTimeout: 2000
-          operationRetryTimeout: 1000
-          connectionTimeoutTimeUnit: SECONDS
-          zookeeperSerializerClass: github.mxsm.zkclient.serializer.FasterJsonSerializer
+  mxsm:
+    zkclient:
+      servers: 127.0.0.1:2181
+      seesionTimeout: 2000
+      connectionTimeout: 2000
+      operationRetryTimeout: 1000
+      connectionTimeoutTimeUnit: SECONDS
+      zookeeperSerializerClass: github.mxsm.zkclient.serializer.FasterJsonSerializer
+
+etcd:
+  endpoints: 127.0.0.1
