--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,9 +10,8 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>socket-server</module>
-    <module>websocket-server</module>
-    <module>api-server</module>
-  </modules>
+        <module>context</module>
+    </modules>
 
 	<dependencies>
 		<dependency>
