--- a/common/pom.xml
+++ b/common/pom.xml
@@ -10,22 +10,14 @@
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <packaging>jar</packaging>
-  <artifactId>remoting</artifactId>
-  <name>remoting</name>
+
+  <artifactId>common</artifactId>
+  <version>0.1-SNAPSHOT</version>
+
+  <name>common</name>
+
 
   <dependencies>
-
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>common</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>logging</artifactId>
-    </dependency>
-
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
@@ -33,8 +25,14 @@
     </dependency>
 
     <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.9.12</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
     </dependency>
 
   </dependencies>
