--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -10,32 +10,28 @@
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.github.mxsm</groupId>
-  <artifactId>register</artifactId>
+  <artifactId>logging</artifactId>
   <version>0.1-SNAPSHOT</version>
-  <name>register</name>
+
+  <name>logging</name>
 
   <dependencies>
 
+    <!-- 添加slf4j日志api -->
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>common</artifactId>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
     </dependency>
-
+    <!-- 添加logback-classic依赖 -->
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>logging</artifactId>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
     </dependency>
-
+    <!-- 添加logback-core依赖 -->
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>remoting</artifactId>
-    </dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
 
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
     </dependency>
 
     <dependency>
@@ -43,7 +39,6 @@
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
 
 </project>
