--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
   <modules>
     <module>register</module>
     <module>remoting</module>
+    <module>common</module>
+    <module>logging</module>
+    <module>protocols</module>
   </modules>
 
   <properties>
@@ -21,15 +24,17 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <netty.version>4.1.65.Final</netty.version>
-    <junit.version>4.12</junit.version>
-    <logger.logback.version>1.2.3</logger.logback.version>
-    <slf4j.version>1.8.0-beta2</slf4j.version>
+    <junit.version>5.7.2</junit.version>
+    <logback.version>1.3.0-alpha5</logback.version>
+    <slf4j.version>2.0.0-alpha1</slf4j.version>
+    <commons.collections4.version>4.4</commons.collections4.version>
+    <guava.version>30.1.1-jre</guava.version>
   </properties>
 
    <dependencies>
      <dependency>
-       <groupId>junit</groupId>
-       <artifactId>junit</artifactId>
+       <groupId>org.junit.jupiter</groupId>
+       <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
@@ -37,6 +42,25 @@
 
   <dependencyManagement>
     <dependencies>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>common</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>logging</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>protocols</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>register</artifactId>
@@ -56,10 +80,41 @@
       </dependency>
 
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.11</version>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>${junit.version}</version>
         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
+      </dependency>
+
+      <!-- 添加slf4j日志api -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <!-- 添加logback-classic依赖 -->
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+      </dependency>
+      <!-- 添加logback-core依赖 -->
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>${logback.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-collections4</artifactId>
+        <version>${commons.collections4.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
