--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
   - mvn package
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash)  -f build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml
 
 after_failure:
   - echo "build failed!"
