--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,25 @@
 				<artifactId>maven-compiler-plugin</artifactId> 
 				<version>3.8.1</version> 
 			</plugin>
+			<plugin>
+			    <groupId>org.eluder.coveralls</groupId>
+			    <artifactId>coveralls-maven-plugin</artifactId>
+			    <version>4.3.0</version>
+			    <configuration>
+				<repoToken>1PYqBCzFpm12B7nOuHqpUBgbGP1rfbGhF</repoToken>
+			    </configuration>
+			</plugin>
+			<plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>cobertura-maven-plugin</artifactId>
+			    <version>2.7</version>
+			    <configuration>
+				<format>xml</format>
+				<maxmem>256m</maxmem>
+				<!-- aggregated reports for multi-module projects -->
+				<aggregate>true</aggregate>
+			    </configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
