修改maven文件修复 test在junit5没有自信的bug

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ group: edge
 
 language: java
 jdk:
+  - oraclejdk8
   - oraclejdk11
 
 cache:
@@ -25,7 +26,7 @@ script:
   - mvn package
 
 after_success:
-  - mvn coveralls:report
+  - mvn clean cobertura:cobertura coveralls:report
   - mvn clean test jacoco:report
   - bash <(curl -s https://codecov.io/bash)
 
