--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,17 @@
         <configuration>
           <repoToken>1PYqBCzFpm12B7nOuHqpUBgbGP1rfbGhF</repoToken>
         </configuration>
+        <dependencies>
+          <!-- Explicit dep on jaxb-api to avoid problems with
+            JDK9 and later, until a new version of
+            coveralls-maven-plugin is released.
+            See also https://github.com/trautonen/coveralls-maven-plugin/issues/112-->
+          <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+          </dependency>
+        </dependencies>
       </plugin>
 
       <plugin>
