--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
 
 after_success:
   - mvn test jacoco:report
-  - mvn coveralls:report
+  - mvn coveralls:report -DrepoToken=$REPO_TOKEN
   - bash <(curl -s https://codecov.io/bash)
 
 after_failure:
