add server code

--- a/protocols/pom.xml
+++ b/protocols/pom.xml
@@ -46,7 +46,7 @@
           <protoSourceRoot>${basedir}/src/main/resources</protoSourceRoot>
           <protocArtifact>com.google.protobuf:protoc:3.17.3:exe:${os.detected.classifier}</protocArtifact>
           <outputDirectory>src/main/java</outputDirectory>
-          <clearOutputDirectory>true</clearOutputDirectory>
+          <clearOutputDirectory>false</clearOutputDirectory>
         </configuration>
         <executions>
           <execution>
