--- a/common/pom.xml
+++ b/common/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>commons-collections4</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
