--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <slf4j.version>2.0.0-alpha1</slf4j.version>
     <commons.collections4.version>4.4</commons.collections4.version>
     <guava.version>30.1.1-jre</guava.version>
+    <commons.cli.version>1.4</commons.cli.version>
   </properties>
 
   <dependencies>
@@ -116,6 +117,12 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-collections4</artifactId>
         <version>${commons.collections4.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>${commons.cli.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
