--- a/register/pom.xml
+++ b/register/pom.xml
@@ -38,6 +38,11 @@
       <artifactId>guava</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
