--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <commons.collections4.version>4.4</commons.collections4.version>
     <guava.version>30.1.1-jre</guava.version>
     <commons.cli.version>1.4</commons.cli.version>
+    <commons.lang3.version>3.12.0</commons.lang3.version>
   </properties>
 
   <dependencies>
@@ -123,6 +124,12 @@
         <groupId>commons-cli</groupId>
         <artifactId>commons-cli</artifactId>
         <version>${commons.cli.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${commons.lang3.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
