--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <guava.version>30.1.1-jre</guava.version>
     <commons.cli.version>1.4</commons.cli.version>
     <commons.lang3.version>3.12.0</commons.lang3.version>
+    <fastjson.version>1.2.76</fastjson.version>
   </properties>
 
   <dependencies>
@@ -131,6 +132,12 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>${commons.lang3.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>${fastjson.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
