--- a/remoting/pom.xml
+++ b/remoting/pom.xml
@@ -36,6 +36,11 @@
       <artifactId>netty-all</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
