--- a/distribution/config/magpiebridge.config
+++ b/distribution/config/magpiebridge.config
@@ -14,4 +14,4 @@
 #  limitations under the License.
 
 magpieBridgeName = DefaultMagpieBridge
-registerAddress= = 127.0.0.1\:8080
+registerAddress = 127.0.0.1\:8888
