--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -1,49 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <parent>
-    <groupId>com.github.mxsm</groupId>
-    <artifactId>im-all</artifactId>
-    <version>0.1-SNAPSHOT</version>
-  </parent>
+    <parent>
+        <groupId>com.github.mxsm</groupId>
+        <artifactId>im-all</artifactId>
+        <version>0.1-SNAPSHOT</version>
+    </parent>
 
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>distribution</artifactId>
-  <name>distribution</name>
-  <packaging>pom</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>distribution</artifactId>
+    <name>distribution</name>
+    <packaging>pom</packaging>
 
-  <profiles>
-    <profile>
-      <id>release-all</id>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>release-all</id>
-                <goals>
-                  <goal>single</goal>
-                </goals>
-                <phase>package</phase>
-                <configuration>
-                  <descriptors>
-                    <descriptor>release.xml</descriptor>
-                  </descriptors>
-                  <appendAssemblyId>false</appendAssemblyId>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-        <finalName>im-${project.version}</finalName>
-      </build>
-    </profile>
+    <profiles>
+        <profile>
+            <id>release-all</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.github.mxsm</groupId>
+                    <artifactId>register</artifactId>
+                    <version>${project.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.github.mxsm</groupId>
+                    <artifactId>magpiebridge</artifactId>
+                    <version>${project.version}</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>release-all</id>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <descriptors>
+                                        <descriptor>release.xml</descriptor>
+                                    </descriptors>
+                                    <appendAssemblyId>false</appendAssemblyId>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+                <finalName>im-${project.version}</finalName>
+            </build>
+        </profile>
 
 
-  </profiles>
+    </profiles>
 
 
 </project>
