--- a/distribution/conf/magpiebridge.conf
+++ b/distribution/conf/magpiebridge.conf
@@ -12,6 +12,8 @@
 #  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
-
+magpieBridgeClusterName = DefaultClusterName
 magpieBridgeName = DefaultMagpieBridge
 registerAddress = 127.0.0.1\:8888
+magpieBridgeId = 0
+magpieBridgeRole = MASTER
