--- a/remoting/pom.xml
+++ b/remoting/pom.xml
@@ -28,7 +28,8 @@
 
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>protocols</artifactId>
+      <artifactId>protocol-core</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
 
     <dependency>
