develop store message and add lifecycle

--- a/magpiebridge/pom.xml
+++ b/magpiebridge/pom.xml
@@ -33,6 +33,11 @@
       <artifactId>remoting</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>store</artifactId>
+    </dependency>
+
   </dependencies>
 
 
