--- a/etcd/pom.xml
+++ b/etcd/pom.xml
@@ -2,7 +2,6 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
   <parent>
     <groupId>com.github.mxsm</groupId>
     <artifactId>im-all</artifactId>
@@ -10,13 +9,18 @@
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.github.mxsm</groupId>
-  <artifactId>register</artifactId>
+  <artifactId>etcd</artifactId>
   <version>0.1-SNAPSHOT</version>
-  <name>register</name>
+
+  <name>etcd</name>
 
   <dependencies>
+
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>logging</artifactId>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>${project.groupId}</groupId>
@@ -24,30 +28,12 @@
     </dependency>
 
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>logging</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>remoting</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>etcd</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
+      <groupId>io.etcd</groupId>
+      <artifactId>jetcd-core</artifactId>
+      <version>0.6.1</version>
     </dependency>
 
   </dependencies>
+
 
 </project>
