--- a/register/pom.xml
+++ b/register/pom.xml
@@ -35,6 +35,11 @@
 
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>protocols</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>etcd</artifactId>
     </dependency>
 
