[mxsm-im-develop] develop register function

--- a/distribution/conf/magpiebridge.conf
+++ b/distribution/conf/magpiebridge.conf
@@ -17,3 +17,4 @@ magpieBridgeName = DefaultMagpieBridge
 registerAddress = 127.0.0.1\:8888
 magpieBridgeId = 0
 magpieBridgeRole = MASTER
+bindIp=192.168.3.21
